fixed flickering bug. added
fixed bug that made the screen go dark when looking at extremely bright pixels

added a checkbox to change the skybox from sphere to cube on the fly

--- a/HDRToneMappingCS11/HDRToneMappingCS11_2015_Win10.vcxproj
+++ b/HDRToneMappingCS11/HDRToneMappingCS11_2015_Win10.vcxproj
@@ -31,7 +31,7 @@
     <ProjectGuid>{D3D11102-96D0-4629-88B8-122C0256058C}</ProjectGuid>
     <RootNamespace>HDRToneMappingCS11</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.10240.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +139,7 @@
     </ClCompile>
     <Link>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>d3dcompiler.lib;dxguid.lib;winmm.lib;comctl32.lib;usp10.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>legacy_stdio_definitions.lib;d3dcompiler.lib;dxguid.lib;winmm.lib;comctl32.lib;usp10.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <LargeAddressAware>true</LargeAddressAware>
@@ -394,7 +394,6 @@
     <None Include="PSApproach.hlsl" />
     <None Include="ReduceTo1DCS.hlsl" />
     <None Include="ReduceToSingleCS.hlsl" />
-    <None Include="skybox11.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h" />
@@ -409,6 +408,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="skybox11.hlsl">
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="skybox11cube.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
